--- a/css/GCT.css
+++ b/css/GCT.css
@@ -1,6 +1,6 @@
 #scroll {
     position: relative;
-}
+}  
 
 .scroll__graphic {
     position: absolute;
@@ -8,42 +8,45 @@
     left: 0;
     bottom: auto;
     width: 100%;
-    -webkit-transform: translate3d(0,0,0);
-    -moz-transform: translate3d(0,0,0);
-    transform: translate3d(0,0,0,);
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
 }
-
+  
 .scroll__graphic.is-fixed {
     position: fixed;
-  }
+}
   
-  .scroll__graphic.is-bottom {
+.scroll__graphic.is-bottom {
     bottom: 0;
     top: auto;
-  }
+}
+ 
 
-  /*Basic, non-fullscreen, vertically-centered chart*/
-  .scroll__graphic .chart {
+/*Basic, non-fullscreen, vertically-centered chart*/
+.scroll__graphic .chart {
     position: absolute;
     right: 1rem;
     top: 50%;
     -moz-transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
     transform: translateY(-50%);
-  }
+}
   
-  /*CSS for text container and steps. left-aligned*/
-  .scroll__text {
+/*CSS for text container and steps. left-aligned*/
+.scroll__text {
     padding: 0 1rem;
     max-width: 30rem;
-  }
+}
   
-  .step {
+.step {
     opacity: 0;
     padding: 1rem;
-  }
+    height: 526px; /*Temporary. For debugging*/
+    background-color: aqua; /*Temporary. For debugging*/
+}
   
-  .step.is-active {
+.step.is-active {
     opacity: 1;
-  }
+}
   
