--- a/css/GCT.css
+++ b/css/GCT.css
@@ -1,52 +1,61 @@
-#scroll {
+#scrolly {
     position: relative;
-}  
+    background-color: #f3f3f3;
+    padding: 1rem;
+}
 
-.scroll__graphic {
-    position: absolute;
-    top: 0;
+article {
+    position: relative;
+    padding: 0;
+    max-width: 20rem;
+    margin: 0 auto;
+}
+
+figure {
+    position: -webkit-sticky;
+    position: sticky;
     left: 0;
-    bottom: auto;
     width: 100%;
+    margin: 0;
     -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
+    background-color: #8a8a8a;
 }
-  
-.scroll__graphic.is-fixed {
-    position: fixed;
-}
-  
-.scroll__graphic.is-bottom {
-    bottom: 0;
-    top: auto;
-}
- 
 
-/*Basic, non-fullscreen, vertically-centered chart*/
-.scroll__graphic .chart {
-    position: absolute;
-    right: 1rem;
-    top: 50%;
-    -moz-transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
-  
-/*CSS for text container and steps. left-aligned*/
-.scroll__text {
-    padding: 0 1rem;
-    max-width: 30rem;
-}
-  
-.step {
-    opacity: 0;
+figure p {
+    text-align: center;
     padding: 1rem;
-    height: 526px; /*Temporary. For debugging*/
-    background-color: aqua; /*Temporary. For debugging*/
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -moz-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    font-size: 8rem;
+    font-weight: 900;
+    color: #fff;
 }
-  
-.step.is-active {
-    opacity: 1;
+
+
+.step {
+    margin: 0 auto 2rem auto;
+    color: #fff;
+    background-color: rgba(0,0,0,0.1)
 }
-  
+
+.step:last-child {
+    margin-bottom: 0;
+}
+
+.step.is-active p {
+    background-color: goldenrod;
+    color: #3b3b3b;
+}
+
+.step p {
+    text-align: center;
+    padding: 1rem;
+    font-size: 1.5rem;
+    background-color: #3b3b3b;
+}
