--- a/css/GCT.css
+++ b/css/GCT.css
@@ -1,26 +1,52 @@
+#intro {
+    margin-bottom: 100px;
+}
+
+.red{
+    color: red;
+}
+
+#lede {
+    
+    padding: 0;
+    max-width: 20rem;
+    font-size: 1.5rem;
+}
+
+#intro h1 {
+    font-size: 4rem;
+    font-family: Arial, Helvetica, sans-serif;
+   
+} 
+
+
 #scrolly {
     position: relative;
-    background-color: #f3f3f3;
+    /* background-color: #f3f3f3; */
     padding: 1rem;
 }
 
 article {
+    display:inline-block;
     position: relative;
     padding: 0;
     max-width: 20rem;
-    margin: 0 auto;
+    /* margin: 0 auto; */
 }
 
 figure {
-    position: -webkit-sticky;
-    position: sticky;
+    display: inline-block;
+    vertical-align: top;
+    /* position: -webkit-sticky;
+    position: sticky; */
     left: 0;
-    width: 100%;
+    width: 70%;
     margin: 0;
+    /* margin-left: 21rem; */
     -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
-    background-color: #8a8a8a;
+    /* background-color: #8a8a8a; */
 }
 
 figure p {
