--- a/project_final/css/GCT.css
+++ b/project_final/css/GCT.css
@@ -1,6 +1,6 @@
 #intro {
     align-content: center;
-    margin-bottom: 610px;
+    margin-bottom: 30px;
 }
 .flex-container {
     display: flex;
@@ -12,11 +12,27 @@
     padding: 1rem;
 }
 
+#info{
+    background-color: rgba(153, 223, 255, 0.4);
+    height:auto;
+    width: auto;
+    padding-bottom: 100px;
+    padding-top: 100px;
+}
+
 article {
     position: relative;
     padding: 0;
     max-width: 20rem;
     margin: 0 auto;
+}
+
+svg {
+    padding-left: 150px;
+    width: 100%;
+    height:350px;
+    align-self: center;
+    vertical-align: middle;
 }
 
 figure {
@@ -46,6 +62,7 @@ figure p {
     font-weight: 900;
     color: #fff;
 }
+
 
 
 .step {
