Added static visualizations and accompany CSS

--- a/css/GCT.css
+++ b/css/GCT.css
@@ -85,3 +85,9 @@ figure p {
     font-size: 1.5rem;
     background-color: #3b3b3b;
 }
+
+.viz p {
+    text-align: center;
+    padding: 1rem;
+    font-size: 1.5rem;
+}
