--- a/css/GCT.css
+++ b/css/GCT.css
@@ -30,7 +30,7 @@ figure {
     -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
-    background-color: #8a8a8a;
+    background-color:white;
 }
 
 figure p {
