--- a/project_final/css/GCT.css
+++ b/project_final/css/GCT.css
@@ -1,6 +1,19 @@
+@font-face {
+  font-family: overspray;
+  src: url(Overspray.ttf);
+}
+
+@font-face {
+  font-family: highwaygothic;
+  src: url(Highway Gothic Regular.ttf);
+}
+
 #intro {
     align-content: center;
     margin-bottom: 30px;
+    background-color: chartreuse;
+    /*font-family: highwaygothic;*/
+    
 }
 .flex-container {
     display: flex;
@@ -8,12 +21,12 @@
 
 #scrolly {
     position: relative;
-    background-color: #f3f3f3;
     padding: 1rem;
+    /*background-color: rgba(0,0,0,0.1);*/
 }
 
 #info{
-    background-color: rgba(153, 223, 255, 0.4);
+    background-color:crimson;
     height:auto;
     width: auto;
     padding-bottom: 100px;
@@ -21,20 +34,27 @@
 }
 
 article {
+    /*background-color: aqua;*/
     position: relative;
     padding: 0;
     max-width: 20rem;
     margin: 0 auto;
 }
 
-svg {
+#infoSVG {
     padding-left: 150px;
     width: 100%;
     height:350px;
-    align-self: center;
-    vertical-align: middle;
+    background-color: darkmagenta;
 }
 
+main {
+    background-color: rgba(0,0,0,0.8);
+    height:auto;
+    width: auto;
+    padding-bottom: 100px;
+    padding-top: 100px;
+}
 figure {
     position: -webkit-sticky;
     position: sticky;
@@ -46,7 +66,7 @@ figure {
     -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
-    background-color: #8a8a8a;
+    /*background-color:rgba(0,0,0,0.2);*/
 }
 
 figure p {
@@ -60,10 +80,8 @@ figure p {
     transform: translate(-50%, -50%);
     font-size: 8rem;
     font-weight: 900;
-    color: #fff;
+    color: orange;
 }
-
-
 
 .step {
     margin: 0 auto 2rem auto;
