--- a/project_final/css/GCT.css
+++ b/project_final/css/GCT.css
@@ -5,16 +5,39 @@
 
 @font-face {
   font-family: highwaygothic;
-  src: url(Highway Gothic Regular.ttf);
+  src: url(HWYGOTH.ttf);
 }
 
 #intro {
-    align-content: center;
+    text-align: center;
+    padding-top: 10px;
     margin-bottom: 30px;
-    background-color: chartreuse;
-    /*font-family: highwaygothic;*/
-    
+    background-color: white;
+    background: repeating-linear-gradient(
+  to right,
+  rgba(255,255,255,0.9),
+  rgba(255,255,255,0.9) 60px,
+  rgba(0,0,0,0.1) 60px,
+  rgba(0,0,0,0.1) 80px
+);
+    font-family: overspray;
+    color: black;
 }
+
+#outro{
+    text-align: center;
+    padding-bottom: 10px;
+    background: repeating-linear-gradient(
+  to right,
+  rgb(255,255,255),
+  rgb(255,255,255) 40px,
+  rgba(0,0,0,0.1) 40px,
+  rgba(0,0,0,0.1) 60px
+);
+    font-family: overspray;
+    color: red;
+}
+
 .flex-container {
     display: flex;
   }
@@ -26,7 +49,6 @@
 }
 
 #info{
-    background-color:crimson;
     height:auto;
     width: auto;
     padding-bottom: 100px;
@@ -42,18 +64,38 @@ article {
 }
 
 #infoSVG {
-    padding-left: 150px;
-    width: 100%;
+    
+    padding-top: 20px;
+    margin-left: 20px;
+    margin-right: 10px;
+    width: 95%;
     height:350px;
-    background-color: darkmagenta;
+    /*background-color: darkmagenta;*/
+}
+
+#line{
+    stroke:white;
+}
+
+#labels{
+   
+    font-family: overspray;
+    font-size:x-large;
+    fill:white;
 }
 
 main {
     background-color: rgba(0,0,0,0.8);
     height:auto;
     width: auto;
-    padding-bottom: 100px;
-    padding-top: 100px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    background-image: url("asphalt-texture.jpg");
+    background-color: #cccccc;
+    background-position: center;
+    background-repeat: repeat-y;
+    background-size: cover;
+    position: relative;
 }
 figure {
     position: -webkit-sticky;
